--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ body {
 .footer-container,
 .main aside {
     /*background: #f16529;*//* orange */
-    background: #f16529;*//* blue */
+    background: #23BCEF;*//* blue */
 }
 
 .title {
