--- a/css/main.css
+++ b/css/main.css
@@ -98,8 +98,8 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
+/* NavBar fixed to top */
+body { padding-top: 70px; }
 
 
 
