chore: refactor App

--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -1,3 +1,6 @@
+/* Roboto font for material-ui */
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+
 .App {
   text-align: center;
 }
