feat: add Material Icons

--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -1,11 +1,11 @@
-/* Roboto font for material-ui */
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+/* Roboto & Material Icons font for material-ui */
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons');
 
 html {
   font-family: 'Roboto', sans-serif;
 }
 
-.nav-link {
+.menu-item-link {
   display: block;
   text-decoration: none;
 }
