fix: loading async pages

--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -10,6 +10,10 @@ html {
   text-decoration: none;
 }
 
+.page-content {
+  margin: 0 24px;
+}
+
 .mini-footer {
   display: flex;
   flex-flow: row wrap;
