--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -10,8 +10,15 @@ html {
   text-decoration: none;
 }
 
-.page-content {
-  margin: 0 24px;
+#page-container {
+  padding-top: 64px;
+  min-height: 200px;
+}
+
+#page-content {
+  padding: 24px; /* @TODO: reduce for small media width */
+  max-width: 920px;
+  margin: 0 auto;
 }
 
 .mini-footer {
