--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -1,8 +1,12 @@
-/* Roboto & Material Icons font for material-ui */
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500|Material+Icons');
-
-html {
-  font-family: 'Roboto', sans-serif;
+.react-icons {
+  display: inline-block;
+  color: rgba(0, 0, 0, 0.870588);
+  fill: currentcolor;
+  height: 24px;
+  width: 24px;
+  user-select: none;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  margin-right: 16px;
 }
 
 .menu-item-link {
