fix: missing react-icons

--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -1,6 +1,6 @@
 .react-icons {
   display: inline-block;
-  color: rgba(0, 0, 0, 0.870588);
+  /*color: rgba(0, 0, 0, 0.870588);*/
   fill: currentcolor;
   height: 24px;
   width: 24px;
