--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -1,12 +1,19 @@
 .react-icons {
   display: inline-block;
-  /*color: rgba(0, 0, 0, 0.870588);*/
   fill: currentcolor;
-  height: 24px;
-  width: 24px;
-  user-select: none;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-  margin-right: 16px;
+}
+.react-icons.small {
+  width: 0.5em;
+  height: 0.5em;
+}
+.react-icons.big {
+  width: 1.5em;
+  height: 1.5em;
+}
+.react-icons.bigger {
+  width: 2em;
+  height: 2em;
 }
 
 .menu-item-link {
@@ -20,7 +27,7 @@
 }
 
 #page-content {
-  padding: 24px; /* @TODO: reduce for small media width */
+  padding: 48px 24px; /* @TODO: reduce for small media width */
   max-width: 920px;
   margin: 0 auto;
 }
