--- a/src/App/styles.css
+++ b/src/App/styles.css
@@ -45,33 +45,18 @@
 .mini-footer {
   display: flex;
   flex-flow: row wrap;
-  /*-ms-flex-pack: justify;*/
-  justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: center;
+  align-items: center;
   padding: 32px 16px;
 }
-.mini-footer--left {
-  display: inline-block;
-  /*-webkit-order: 0;
-  -ms-flex-order: 0;*/
-  order: 0;
-}
 .mini-footer--center {
-  display: inline-block;
-  /*-webkit-order: 1;
-  -ms-flex-order: 1;*/
-  order: 1;
+  text-align: center;
+  max-width: 920px;
 }
-.mini-footer--right {
-  display: inline-block;
-  /*-webkit-order: 2;
-  -ms-flex-order: 2;*/
-  order: 2;
+.mini-footer a {
+    color: inherit;
 }
-
-.mdl-logo {
-    margin-bottom: 16px;
-    color: #fff;
-}
-.mdl-mini-footer .mdl-logo {
-    line-height: 36px;
+.mini-footer a:hover {
+    color: white;
 }
